--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Game Developments">
               <a href="#">
 
                 <figure class="project-img">
@@ -722,12 +722,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img href="https://github.com/DanyalAbbas/krekhed" src="./assets/images/project-1.jpg" alt="Krekhed" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Krekhed - The Game</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Game Development</p>
 
               </a>
             </li>
