--- a/index.html
+++ b/index.html
@@ -714,15 +714,15 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Game Developments">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="game developments">
+              <a href="https://github.com/DanyalAbbas/krekhed">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img href="https://github.com/DanyalAbbas/krekhed" src="./assets/images/project-1.jpg" alt="Krekhed" loading="lazy">
+                  <img src="./assets/images/project-1.jpg" alt="Krekhed" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Krekhed - The Game</h3>
