--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="game development">
               <a href="#">
 
                 <figure class="project-img">
@@ -745,7 +745,7 @@
 
                 <h3 class="project-title">Orizon</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Game Development</p>
 
               </a>
             </li>
