--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="game developments">
+            <li class="project-item  active" data-filter-item data-category="Game Development">
               <a href="https://github.com/DanyalAbbas/krekhed">
 
                 <figure class="project-img">
@@ -722,7 +722,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="Krekhed" loading="lazy">
+                  <img src="./assets/images/project-1.jpeg" alt="Krekhed" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Krekhed - The Game</h3>
@@ -732,7 +732,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="game development">
+            <li class="project-item  active" data-filter-item data-category="Game Development">
               <a href="#">
 
                 <figure class="project-img">
