--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Game Development">
+            <li class="project-item  active" data-filter-item data-category="game development">
               <a href="https://github.com/DanyalAbbas/krekhed">
 
                 <figure class="project-img">
@@ -732,7 +732,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Game Development">
+            <li class="project-item  active" data-filter-item data-category="game development">
               <a href="#">
 
                 <figure class="project-img">
@@ -750,20 +750,20 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="ml/dl projects">
+              <a href="https://github.com/DanyalAbbas/SignSpeak">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/project-3.jpeg" alt="SignSpeak" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">SignSpeak</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">ML/DL Projects</p>
 
               </a>
             </li>
