--- a/index.html
+++ b/index.html
@@ -732,20 +732,20 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="game development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="ml/dl projects">
+              <a href="https://github.com/DanyalAbbas/Machine_Learning/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/project-2.png" alt="Homeprices Predictor" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Homeprices Predictor</h3>
 
-                <p class="project-category">Game Development</p>
+                <p class="project-category">ML/DL Projects</p>
 
               </a>
             </li>
