--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="ml/dl projects">
-              <a href="https://github.com/DanyalAbbas/SignSpeak">
+              <a href="https://www.linkedin.com/feed/update/urn:li:activity:7167151574987825154/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
