--- a/index.html
+++ b/index.html
@@ -900,24 +900,13 @@
 
         <section class="contact-form">
 
-          <h3 class="h3 form-title">Contact Form</h3>
+          <h3 class="h3 form-title">Contact me on</h3>
+          <a href="mailto:abasdaniel61@gmail.com" class="contact-link">abasdaniel61@gmail.com</a>
+          <a href="instagram.com/danyal_abbas._" class="contact-link">Instagram</a>
+          <a href="https://www.linkedin.com/in/danyalabbas/" class="contact-link">LinkedIn</a>
+          <a href="https://github.com/DanyalAbbas" class="contact-link">Github</a>
 
-          <form action="#" class="form" data-form>
-
-            <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
-
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
-            </div>
-
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
-
-            <button class="form-btn" type="submit" disabled data-form-btn>
-              <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
-            </button>
-
-          </form>
+          
 
         </section>
 
