--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/hamza.png" alt="Hamza Mughal" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Hamza Mughal</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
