--- a/index.html
+++ b/index.html
@@ -128,25 +128,25 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://twitter.com/danyal_abbas_" class="social-link">
+            <a href="https://twitter.com/danyal_abbas_" target="_blank" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/danyal_abbas._/" class="social-link">
+            <a href="https://www.instagram.com/danyal_abbas._/"target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.github.com/danyalabbas/" class="social-link">
+            <a href="https://www.github.com/danyalabbas/" target="_blank" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/danyalabbas/" class="social-link">
+            <a href="https://www.linkedin.com/in/danyalabbas/" target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
