--- a/index.html
+++ b/index.html
@@ -547,24 +547,24 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Python Developer Intern</h4>
-
-              <span>Feb, 2024 — Present</span>
-
-              <p class="timeline-text">
-                Completed the tasks and projects provided, with great use of different Python Libraries
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
               <h4 class="h4 timeline-item-title">Business Manager | Software Developer</h4>
 
               <span>Jan, 2023 — Present</span>
 
               <p class="timeline-text">
                 Handled and Managed the website, marketing, SEO, also developing POS software for DunixStore
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Python Developer Intern</h4>
+
+              <span>Feb, 2024 — June, 2024</span>
+
+              <p class="timeline-text">
+                Completed the tasks and projects provided, with great use of different Python Libraries
               </p>
 
             </li>
@@ -710,14 +710,14 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="game development">
-              <a href="https://github.com/DanyalAbbas/krekhed">
+              <a href="https://github.com/DanyalAbbas/krekhed" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpeg" alt="Krekhed" loading="lazy">
+                  <img src="./assets/images/project-1.jpeg" target="_blank" alt="Krekhed" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Krekhed - The Game</h3>
@@ -728,14 +728,14 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="ml/dl projects">
-              <a href="https://github.com/DanyalAbbas/Machine_Learning/">
+              <a href="https://github.com/DanyalAbbas/Machine_Learning/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="Homeprices Predictor" loading="lazy">
+                  <img src="./assets/images/project-2.png" target="_blank" alt="Homeprices Predictor" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Homeprices Predictor</h3>
@@ -746,14 +746,14 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="ml/dl projects">
-              <a href="https://www.linkedin.com/feed/update/urn:li:activity:7167151574987825154/">
+              <a href="https://www.linkedin.com/feed/update/urn:li:activity:7167151574987825154/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpeg" alt="SignSpeak" loading="lazy">
+                  <img src="./assets/images/project-3.jpeg" target="_blank" alt="SignSpeak" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">SignSpeak</h3>
