--- a/index.html
+++ b/index.html
@@ -902,9 +902,9 @@
 
           <h3 class="h3 form-title">Contact me on</h3>
           <a href="mailto:abasdaniel61@gmail.com" class="contact-link">abasdaniel61@gmail.com</a>
-          <a href="instagram.com/danyal_abbas._" class="contact-link">Instagram</a>
-          <a href="https://www.linkedin.com/in/danyalabbas/" class="contact-link">LinkedIn</a>
-          <a href="https://github.com/DanyalAbbas" class="contact-link">Github</a>
+          <a href="https://www.instagram.com/danyal_abbas._"target="_blank" class="contact-link">Instagram</a>
+          <a href="https://www.linkedin.com/in/danyalabbas/" target="_blank" class="contact-link">LinkedIn</a>
+          <a href="https://github.com/DanyalAbbas" target="_blank" class="contact-link">Github</a>
 
           
 
