--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    It was a pleasure to have Danyal as my math and stats teacher. His expertise in solving complex data science algorithms was truly impressive. Danyal has an exceptional ability to break down intricate problems and make them understandable. Their guidance and support significantly enhanced my understanding of these subjects. Knowing and learning from Danyal was an enriching experience, and their skills in tackling challenging data science tasks are outstanding. I highly recommend Danyal for their exceptional teaching and problem-solving abilities.
+                    Having Danyal Abbas as my math and stats student was a true pleasure. Their knack for solving complex data science algorithms was impressive and demonstrated a deep understanding of the subject matter. Danyal consistently showed exceptional problem-solving skills and a dedication to mastering difficult concepts. It was inspiring to see their growth and enthusiasm for data science. I have no doubt that Danyal will continue to excel and make significant contributions in their future endeavors.
+
 
 
                   </p>
