--- a/index.html
+++ b/index.html
@@ -481,6 +481,18 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">NED University of Engineering and Technology</h4>
+
+              <span>2024 — 2028</span>
+
+              <p class="timeline-text">
+                Bachelor of Science - BS, Computer science and information technology (CSIT)
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Bano Qabil 2.0</h4>
 
               <span>2023 — 2024</span>
