--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
+          <li class="social-item">
+            <a href="https://www.fiverr.com/danyal_abbas_" target="_blank" class="social-link">
+              <ion-icon name="logo-fiverr"></ion-icon>
+            </a>
+          </li>
 
           <li class="social-item">
             <a href="https://www.github.com/danyalabbas/" target="_blank" class="social-link">
