--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
               <span>2024 — 2028</span>
 
               <p class="timeline-text">
+                GPA : 3.93
                 Bachelor of Science - BS, Computer science and information technology (CSIT)
               </p>
 
