--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
         <ul class="social-list">
 
           <li class="social-item">
+            <a href="https://kaggle.com/danyalabbas1" target="_blank" class="social-link">
+              <ion-icon name="logo-kaggle"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
             <a href="https://twitter.com/danyal_abbas_" target="_blank" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
