--- a/index.html
+++ b/index.html
@@ -764,24 +764,24 @@
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://iamboutkms.netlify.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/project-4.png" alt="Teehee Tutor AI" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Teehee Tutor AI</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">ML/DL Projects</p>
 
               </a>
             </li>
-
+<!-- 
             <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
 
