--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://iamboutkms.netlify.app/">
+              <a href="https://iamboutkms.netlify.app/" target="_blank"> 
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
