--- a/index.html
+++ b/index.html
@@ -128,18 +128,6 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://twitter.com/danyal_abbas_" target="_blank" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="https://www.instagram.com/danyal_abbas._/"target="_blank" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
             <a href="https://www.github.com/danyalabbas/" target="_blank" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
@@ -150,6 +138,13 @@
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
+
+          <li class="social-item">
+            <a href="https://kaggle.com/danyalabbas1/" target="_blank" class="social-link">
+              <ion-icon name="logo-Kaggle"></ion-icon>
+            </a>
+          </li>
+          
         </ul>
 
       </div>
