--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
           <li class="social-item">
             <a href="https://kaggle.com/danyalabbas1/" target="_blank" class="social-link">
-              <ion-icon name="logo-Kaggle"></ion-icon>
+            <img src="https://www.vectorlogo.zone/logos/kaggle/kaggle-icon.svg" alt="Kaggle" style="width: 24px; height: 24px;">
             </a>
           </li>
           
