--- a/index.html
+++ b/index.html
@@ -542,9 +542,21 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Trainee Salesforce Developer</h4>
+
+              <span>April, 2025 — Present</span>
+
+              <p class="timeline-text">
+                Worked on Refund Management using the Stripe library, with invoicing natively handled in salesforce.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Business Manager | Software Developer</h4>
 
-              <span>Jan, 2023 — Present</span>
+              <span>Jan, 2023 — Jan, 2025</span>
 
               <p class="timeline-text">
                 Handled and Managed the website, marketing, SEO, also developing POS software for DunixStore
